--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,26 +18,41 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
+          cache: 'pnpm'
           
       - name: Install pnpm
         uses: pnpm/action-setup@v2.2.4
         with:
           version: 8
+          run_install: false
+
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_ENV
+
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
           
       - name: Install dependencies
         run: pnpm install
         
-      - name: Check for secrets
-        run: pnpm tsx packages/sdk-core/src/utils/secrets-check.ts
-        
-      - name: Security audit
-        run: pnpm audit
-        
-      - name: Lint
-        run: pnpm lint
+      - name: Build
+        run: pnpm build
         
       - name: Test
         run: pnpm test
         
-      - name: Build
-        run: pnpm build
+      - name: Lint
+        run: pnpm lint
+        
+      - name: Security audit
+        run: pnpm audit
+        
+      - name: Check for secrets
+        run: pnpm tsx packages/sdk-core/src/utils/secrets-check.ts
