--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,53 +6,44 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      FORCE_COLOR: 1
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 8
+
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
           cache: 'pnpm'
-          
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2.2.4
-        with:
-          version: 8
-          run_install: false
 
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-          
       - name: Install dependencies
-        run: pnpm install
-        
-      - name: Build
+        run: pnpm install --frozen-lockfile
+
+      - name: Build packages
         run: pnpm build
-        
-      - name: Test
+
+      - name: Run tests
         run: pnpm test
-        
-      - name: Lint
+
+      - name: Run lint
         run: pnpm lint
-        
-      - name: Security audit
+
+      - name: Run security audit
         run: pnpm audit
-        
+
       - name: Check for secrets
         run: pnpm tsx packages/sdk-core/src/utils/secrets-check.ts
