--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "prettier": "^3.0.3",
     "typescript": "^5.2.2",
     "tsx": "^4.7.0",
+    "@types/node": "^18.18.0",
     "vitest": "^1.3.1",
-    "tsup": "^8.3.5",
-    "@types/node": "^18.18.0"
+    "tsup": "^8.3.5"
   },
   "engines": {
     "node": ">=18",
