--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,42 +2,22 @@ name: CI
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # tag=v3
-
-      - uses: pnpm/action-setup@c3b53f6a16e57305370b4ae5a540c2077a1d50dd # tag=v2
-        with:
-          version: 8
-
-      - uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
-        with:
-          node-version: 18
-          cache: 'pnpm'
-
-      - name: Install dependencies
-        shell: bash
+      - name: Clone repository
+        run: git clone https://github.com/ActionpackdHQ/ai-sdk.git .
+      - name: Setup
+        run: |
+          curl -fsSL https://deb.nodesource.com/setup_18.x | sudo -E bash -
+          sudo apt-get install -y nodejs
+          sudo npm install -g pnpm
+      - name: Build and Test
         run: |
           pnpm install
-
-      - name: Build
-        shell: bash
-        run: |
           pnpm build
-
-      - name: Test
-        shell: bash
-        run: |
           pnpm test
-
-      - name: Lint
-        shell: bash
-        run: |
-          pnpm lint || true
