--- a/packages/sdk-core/package.json
+++ b/packages/sdk-core/package.json
@@ -20,9 +20,9 @@
   "author": "Actionpackd",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actionpackd/ai-sdk/issues"
+    "url": "https://github.com/ActionpackdHQ/AI-SDK/issues"
   },
-  "homepage": "https://github.com/actionpackd/ai-sdk#readme",
+  "homepage": "https://github.com/ActionpackdHQ/AI-SDK#readme",
   "type": "module",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
